Initial hello world commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <title>EEG Data by </title>
+  </head>
+
+  <body>
+    <div id="container">
+      <div class="inner">
+
+        <header>
+          <h1>EEG Dataset</h1>
+          <h2>.mat files for Chapter k of BookTitle</h2>
+        </header>
+
+        <section id="downloads" class="clearfix">
+          <a href="https://github.com/GarettDJohnson/GarettDJohnson.github.io/raw/master/P300.mat" id="download-mat" class="button"><span>Download P300 data</span></a>
+          <a href="https://github.com/GarettDJohnson/GarettDJohnson.github.io/raw/master/SSVEP.mat" id="download-mat" class="button"><span>Download SSVEP data</span></a>
+        </section>
+
+        <hr>
+
+        <section id="main_content">
+          <h1>
+<a id="eeg-data" class="anchor" href="#eeg-data" aria-hidden="true"><span class="octicon octicon-link"></span></a>EEG Datasets for Book Chapter</h1>
+
+
+<p>Garett Johnson </p>
+
+<p>Data Updated: 18 June 2017</p>
+
+<h2>
+<a id="what-is-it" class="anchor" href="#what-is-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is it?</h2>
+
+<p>These are <strong>.mat</strong> formatted data sets corresponding to...</p>
+
+
+      </div>
+    </div>
+  </body>
+</html>
